--- a/web/theme/css/styling.css
+++ b/web/theme/css/styling.css
@@ -2,7 +2,7 @@
 {
     margin: 0;
     padding: 0;
-    background-image: url(theme/images/adminLogin.jpg);
+    background-image: url(../images/adminLogin.jpg);
     background-size: cover;
     font-family: sans-serif;
 
